086_expr1/grade.txt
Grading at 11/04/2024:22:02:29.420130
For commit ID bb95bbbc0b113625726b75a2f8f0eba6e5df95e2
Grading at Mon Nov  4 05:02:29 PM EST 2024
Compiling code
In file included from expr.cpp:1:
expr.hpp:25:26: error: override controls (override/final) only available with ‘-std=c++11’ or ‘-std=gnu++11’ [-Werror]
   25 |   std::string toString() const override { return std::to_string(op1); }
      |                          ^~~~~
expr.hpp: In member function ‘virtual std::string NumExpression::toString() const’:
expr.hpp:25:55: error: ‘to_string’ is not a member of ‘std’; did you mean ‘wstring’?
   25 |   std::string toString() const override { return std::to_string(op1); }
      |                                                       ^~~~~~~~~
      |                                                       wstring
expr.hpp: At global scope:
expr.hpp:39:26: error: override controls (override/final) only available with ‘-std=c++11’ or ‘-std=gnu++11’ [-Werror]
   39 |   std::string toString() const override {
      |                          ^~~~~
cc1plus: all warnings being treated as errors
The code did not compile.

Overall Grade: F
